# codal-stm32

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: new-variant-request.md
.github/workflows/: codal-buildpr.yml  codal-buildtarget.yml
asm/: CortexContextSwitch.s
inc/: PinNumber.h  STM32AdvertisingBLE.h  STM32DMA.h  STM32I2C.h  STM32InterruptHandlers.h  STM32LowLevelTimer.h  STM32PWM.h  STM32Pin.h  STM32RTC.h  STM32SAI.h  STM32SPI.h  STM32Serial.h  STM32SerialBLE.h  STM32SingleWireSerial.h  STM32USBSerial.h  STM32WebUSB.h  font.h  frameBuffer.h  i2c.h  lcd_utils.h  pdm2pcm.h  platform_includes.h  registerBit_utils.h  stm32.h
inc/drivers/: frameBuffer.h  hts221.h  i2c_lcd.h  lcd_utils.h  pcm_utils.h  registerBit_utils.h  rgb_lcd.h  ssd1306.h
source/: Arduino.h  SMT32SerialBLE.cpp  STM32AdvertisingBLE.cpp  STM32DMA.cpp  STM32I2C.cpp  STM32I2C.h  STM32InterruptHandlers.c  STM32LowLevelTimer.cpp  STM32Pin.cpp  STM32RTC.cpp  STM32SAI.cpp  STM32SPI.cpp  STM32Serial.cpp  STM32SingleWireSerial.cpp  STM32USBSerial.cpp  STM32WebUSB.cpp  WInterrupts.cpp  WInterrupts.h  board.c  board.h  codal_target_hal.cpp  core_debug.h  frameBuffer.cpp  hooks.c  pdm2pcm.cpp  pins_arduino.c  pins_arduino.h  pins_arduino_analog.h  pins_arduino_digital.h  twi.c  twi.h  utils.h  wiring_analog.c  wiring_analog.h  wiring_constants.h  wiring_digital.c  wiring_digital.h  wiring_time.c  wiring_time.h
source/drivers/: i2c_lcd.cpp  registerBit_utils.cpp  rgb_lcd.cpp
source/stm32/: PeripheralPins.h  PinAF_STM32F1.h  PinConfigured.h  PinNames.h  PinNamesTypes.h  PortNames.c  PortNames.h  STM32PWM.cpp  analog.cpp  analog.h  backup.h  bootloader.c  bootloader.h  clock.c  clock.h  core_callback.c  core_callback.h  digital_io.h  dwt.c  dwt.h  hw_config.c  hw_config.h  interrupt.cpp  interrupt.h  lock_resource.h  otp.c  otp.h  pinconfig.h  pinmap.c  pinmap.h  spi_com.c  spi_com.h  stm32_def.c  stm32_def.h  stm32_def_build.h  stm32yyxx_hal_conf.h  syscalls.c  timer.c  timer.h  uart.c  (+1 more)
src/: Arduino.h  HardwareTimer.cpp  SMT32SerialBLE.cpp  STM32I2C.cpp  STM32InterruptHandlers.c  STM32LowLevelTimer.cpp  STM32Pin.cpp  STM32SPI.cpp  STM32Serial.cpp  STM32USBSerial.cpp  STM32WebUSB.cpp  WInterrupts.cpp  board.h  codal_target_hal.cpp  frameBuffer.cpp  i2c.c  syscalls.c  utils.h  wiring_analog.c  wiring_analog.h  wiring_constants.h  wiring_digital.c  wiring_digital.h  wiring_pulse.cpp  wiring_shift.c  wiring_shift.h  wiring_time.c  wiring_time.h
src/drivers/: frameBuffer.cpp  hts221.cpp  ssd1306.cpp  ssd1306_i2c.cpp
src/stm32/: PinConfigured.h  clock.c  low_power.c  twi.c  uart.c  uart.h
system/STM32L4xx/: stm32l4xx_hal_conf_default.h
system/STM32WBxx/: stm32wbxx_hal_conf_default.h
variants/AFROFLIGHT_F103CB/: PeripheralPins.c
variants/ARMED_V1/: PeripheralPins.c
variants/BLACK_F407XX/: PeripheralPins.c
variants/BLUE_F407VE_Mini/: PeripheralPins.c
variants/DEMO_F030F4/: PeripheralPins.c
variants/DISCO_F030R8/: PeripheralPins.c
variants/DISCO_F072RB/: PeripheralPins.c
variants/DISCO_F100RB/: PeripheralPins.c
variants/DISCO_F407VG/: PeripheralPins.c
variants/DISCO_F413ZH/: PeripheralPins.c
variants/DISCO_F746NG/: PeripheralPins.c
variants/DISCO_G0316/: PeripheralPins.c
variants/DISCO_L072CZ_LRWAN1/: PeripheralPins.c
variants/DISCO_L475VG_IOT/: PeripheralPins.c  variant.h
variants/DIYMORE_F407VGT/: PeripheralPins.c
variants/EEXTR_F030_V1/: PeripheralPins.c
variants/ELEKTOR_F072C8/: PeripheralPins.c
variants/FEATHER_F405/: PeripheralPins.c
variants/FK407M1/: PeripheralPins.c
variants/FYSETC_S6/: PeripheralPins.c
variants/Generic_F103Rx/: PeripheralPins.c
variants/Generic_F103Zx/: PeripheralPins.c
variants/Generic_F401Cx/: PeripheralPins.c
variants/Generic_F401Rx/: PeripheralPins.c
variants/Generic_F410Cx/: PeripheralPins.c
variants/Generic_F410Rx/: PeripheralPins.c
variants/Generic_F411Cx/: PeripheralPins.c
variants/Generic_F411Rx/: PeripheralPins.c
variants/Generic_F412Cx/: PeripheralPins.c
variants/Generic_F412Rx/: PeripheralPins.c
variants/Generic_F446Rx/: PeripheralPins.c
variants/Generic_F4x3Cx/: PeripheralPins.c
variants/Generic_F4x3Rx/: PeripheralPins.c
variants/Generic_F4x5RG/: PeripheralPins.c
variants/Generic_F4x7Vx/: PeripheralPins.c
variants/HY_TinySTM103T/: PeripheralPins.c
variants/MALYANM200_F103CB/: PeripheralPins.c
variants/MALYANMx00_F070CB/: PeripheralPins.c
variants/MAPLEMINI_F103CB/: PeripheralPins.c
variants/MKR_SHARKY/: PeripheralPins.c
variants/NUCLEO_F030R8/: PeripheralPins.c
variants/NUCLEO_F031K6/: PeripheralPins.c
variants/NUCLEO_F091RC/: PeripheralPins.c
variants/NUCLEO_F103RB/: PeripheralPins.c
variants/NUCLEO_F207ZG/: PeripheralPins.c
variants/NUCLEO_F302R8/: PeripheralPins.c
variants/NUCLEO_F303K8/: PeripheralPins.c
variants/NUCLEO_F303RE/: PeripheralPins.c
variants/NUCLEO_F429ZI/: PeripheralPins.c
variants/NUCLEO_F446RE/: PeripheralPins.c
variants/NUCLEO_F4x1RE/: PeripheralPins.c
variants/NUCLEO_F767ZI/: PeripheralPins.c
variants/NUCLEO_F7x6ZG/: PeripheralPins.c
variants/NUCLEO_G071RB/: PeripheralPins.c
variants/NUCLEO_G431KB/: PeripheralPins.c
variants/NUCLEO_G431RB/: PeripheralPins.c
variants/NUCLEO_G474RE/: PeripheralPins.c
variants/NUCLEO_H743ZI/: PeripheralPins.c
variants/NUCLEO_L031K6/: PeripheralPins.c
variants/NUCLEO_L053R8/: PeripheralPins.c
variants/NUCLEO_L073RZ/: PeripheralPins.c
variants/NUCLEO_L152RE/: PeripheralPins.c
(+723 files in other folders)
